--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar is-black" role="navigation" aria-label="main navigation">
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item is-active"> Marriage </a>
+
+          <a class="navbar-item"> Acceuil </a>
+          <a class="navbar-item"> Programme </a>
+          <a class="navbar-item"> Lieu </a>
+          <a class="navbar-item"> Liste De Cadeaux </a>
+          <a class="navbar-item"> Menu </a>
+        </div>
+    </nav>
     <section class="section">
       <div class="container">
         <h1 class="title">Hello World</h1>
