added some pictures

--- a/index.html
+++ b/index.html
@@ -17,6 +17,86 @@
     />
 
     <title>Hello, world!</title>
+    <!--
+      Rose balais: #C4698F
+      Rose Mountbatten: #997A8D
+
+
+      Nom du domaine : ekambiSwedding.com
+Thème du mariage : Champêtre
+Nos couleurs : Rose pâle (vieux rose) &amp; Greenery (vert nature)
+Dress Code : Tenue de Cocktail
+Lieu : Jardins les PALETUVIERS MATANDA – Bonabéri (Bonassama)
+
+ACCUEIL
+
+Bienvenue dans notre monde!
+Nous avions souhaité pouvoir vous fournir quelques informations utiles afin de faciliter votre
+organisation pour participer au Tome 2 de notre mariage. Votre présence à cet évènement
+sera réellement un symbole d’amour marquant pour la suite de notre belle histoire, et nous
+espérons que vos allers-retours/voyages se feront sans complications. Si vous devez vous
+plaindre de courbatures dès le lendemain, ce serait super que ce soit uniquement dû à
+l&#39;expression de votre joie débordante tout au long de cette belle journée.
+Nous frémissons de joie à l&#39;idée de vous compter parmi nous!
+The Ekambi’s
+
+OUR LOVE STORY
+Un signe, encore un signe… puis un autre……
+Au cœur des mots, s’est écrit Notre histoire d’amour !!!
+
+13 Mai 2013 : Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a commencé
+14 Février 2015 : Officialisation de la team « Ekambi’S »
+02 Juin 2015 : Nous sommes devenus parents
+21 Décembre 2019 : Bénédiction de la team « Ekambi’S » devant Dieu et vous…
+
+« Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un
+qui ne peut pas être heureux sans toi…c’est mieux »
+
+PROGRAMME DE LA JOURNEE
+
+10h : Arrivée des invités et Installation
+10h 30 : Entrée des Demoiselles et Garçons d’honneur
+10h 45 : Entrée des pasteurs
+10h 50 : Entrée du Marié et sa Maman
+10h 55 : Entrée de la mariée et son papa
+11h 00 : Début de la cérémonie
+12h 45 : Fin de la cérémonie
+13h 00 : Séance Photos et Apéritif Musical
+14h 30 : Début du Cocktail
+
+Mariage
+Samedi, 21 Décembre 2019 à 11h 00
+Jardins les PALETUVIERS – MATANDA à Bonabéri
+Chères invitées, chers invités,
+Nous souhaitons également attirer votre attention sur l&#39;heure de début de la cérémonie.
+Nous voudrions pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à certains de nos
+chaleureux convives des bains de soleil interminables…A cet effet, nous vous prions d&#39;arriver au
+plus tard à 10h15 afin que le protocole d&#39;organisation puisse avoir suffisamment de temps pour
+vous orienter et vous installer. Ceci permettra également de déployer rapidement des solutions à
+d&#39;éventuels imprévus.
+La cérémonie se déroulera en plein air, dans les jardins des PALETUVIERS –MATANDA à
+l’entrée de Bonabéri. Vous conviendrez avec nous qu&#39;il serait regrettable de débuter cette fête
+avec des vêtements trempés par de la transpiration.
+Le succès de cet évènement commence par votre ponctualité !
+Pour ceux qui ont des enfants en bas âges, seuls les enfants âgés de 6 ans ou moins, pourront
+accompagner leurs parents. Il nous est difficile de les compter parmi nous, compte tenu de
+l&#39;organisation mise en place. Nous espérons que vous comprendrez et que vous respecterez
+cela.
+Par la même occasion, veuillez préciser si votre enfant (06 ans au moins) est allergique à l&#39;alcool
+:-)
+
+ Lieux
+
+Jardins les PALETUVIERS MATANDA situé à 800 m du rond-point Bonassama, à l’entrée de
+Bonabéri. Ils sont faciles d’accès.
+
+La cérémonie religieuse et le cocktail se tiendront dans les jardins. Nous vous y attendrons à
+partir de 10h 00.
+
+LISTE DES CADEAUX
+
+Nous n’avons pas de liste de cadeaux.
+    -->
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -52,8 +132,8 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <h1>Hello, world!</h1>
+    <div class="container-fluid">
+      <div></div>
     </div>
 
     <!-- Optional JavaScript -->
