--- a/index.html
+++ b/index.html
@@ -1,119 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!-- Meta Tags for Bootstrap 4 -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap 4 CSS -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-
-    <title>Hello, world!</title>
     <!--
-      Rose balais: #C4698F
-      Rose Mountbatten: #997A8D
-
-
-      Nom du domaine : ekambiSwedding.com
-Thème du mariage : Champêtre
-Nos couleurs : Rose pâle (vieux rose) &amp; Greenery (vert nature)
-Dress Code : Tenue de Cocktail
-Lieu : Jardins les PALETUVIERS MATANDA – Bonabéri (Bonassama)
+        Nom du domaine : ekambiSwedding.com
+Thème du mariage : Champêtre
+Nos couleurs : Rose pâle (vieux rose) & Greenery (vert nature)
+Dress Code : Tenue de Cocktail
+Lieu : Jardins les PALETUVIERS MATANDA –  Bonabéri (Bonassama)
 
 ACCUEIL
-
 Bienvenue dans notre monde!
-Nous avions souhaité pouvoir vous fournir quelques informations utiles afin de faciliter votre
-organisation pour participer au Tome 2 de notre mariage. Votre présence à cet évènement
-sera réellement un symbole d’amour marquant pour la suite de notre belle histoire, et nous
-espérons que vos allers-retours/voyages se feront sans complications. Si vous devez vous
-plaindre de courbatures dès le lendemain, ce serait super que ce soit uniquement dû à
-l&#39;expression de votre joie débordante tout au long de cette belle journée.
-Nous frémissons de joie à l&#39;idée de vous compter parmi nous!
+Nous avions souhaité pouvoir vous fournir quelques informations utiles afin de faciliter votre organisation pour participer au Tome 2 de notre mariage. Votre présence à cet évènement sera réellement un symbole d’amour marquant pour la suite de notre belle histoire, et nous espérons que vos allers-retours/voyages se feront sans complications. Si vous devez vous plaindre de courbatures dès le lendemain, ce serait super que ce soit uniquement dû à l'expression de votre joie débordante tout au long de cette belle journée.
+Nous frémissons de joie à l'idée de vous compter parmi nous!
 The Ekambi’s
 
 OUR LOVE STORY
-Un signe, encore un signe… puis un autre……
-Au cœur des mots, s’est écrit Notre histoire d’amour !!!
+     Un signe, encore un signe… puis un autre……
+                                                     Au cœur des mots, s’est écrit Notre histoire d’amour !!!
 
-13 Mai 2013 : Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a commencé
-14 Février 2015 : Officialisation de la team « Ekambi’S »
-02 Juin 2015 : Nous sommes devenus parents
-21 Décembre 2019 : Bénédiction de la team « Ekambi’S » devant Dieu et vous…
+13 Mai 2013 : Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a commencé
+14 Février 2015 : Officialisation de la team « Ekambi’S »
+02 Juin 2015 : Nous sommes devenus parents
+21 Décembre 2019 : Bénédiction de la team « Ekambi’S » devant Dieu et vous…
 
-« Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un
-qui ne peut pas être heureux sans toi…c’est mieux »
+    « Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux sans toi…c’est mieux »
+
+
+
+
+
 
 PROGRAMME DE LA JOURNEE
 
-10h : Arrivée des invités et Installation
-10h 30 : Entrée des Demoiselles et Garçons d’honneur
-10h 45 : Entrée des pasteurs
-10h 50 : Entrée du Marié et sa Maman
-10h 55 : Entrée de la mariée et son papa
-11h 00 : Début de la cérémonie
-12h 45 : Fin de la cérémonie
-13h 00 : Séance Photos et Apéritif Musical
-14h 30 : Début du Cocktail
+10h : Arrivée des invités et Installation
+10h 30 : Entrée des Demoiselles et Garçons d’honneur
+10h 45 : Entrée des pasteurs
+10h 50 : Entrée du Marié et sa Maman
+10h 55 : Entrée de la mariée et son papa
+11h 00 : Début de la cérémonie
+12h 45 : Fin de la cérémonie
+13h 00 : Séance Photos et Apéritif Musical
+14h 30 : Début du Cocktail
 
-Mariage
-Samedi, 21 Décembre 2019 à 11h 00
-Jardins les PALETUVIERS – MATANDA à Bonabéri
+                                                              Mariage
+                                                 Samedi, 21 Décembre 2019 à 11h 00
+                                      Jardins les PALETUVIERS – MATANDA à Bonabéri
 Chères invitées, chers invités,
-Nous souhaitons également attirer votre attention sur l&#39;heure de début de la cérémonie.
-Nous voudrions pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à certains de nos
-chaleureux convives des bains de soleil interminables…A cet effet, nous vous prions d&#39;arriver au
-plus tard à 10h15 afin que le protocole d&#39;organisation puisse avoir suffisamment de temps pour
-vous orienter et vous installer. Ceci permettra également de déployer rapidement des solutions à
-d&#39;éventuels imprévus.
-La cérémonie se déroulera en plein air, dans les jardins des PALETUVIERS –MATANDA à
-l’entrée de Bonabéri. Vous conviendrez avec nous qu&#39;il serait regrettable de débuter cette fête
-avec des vêtements trempés par de la transpiration.
+Nous souhaitons également attirer votre attention sur l'heure de début de la cérémonie.
+Nous voudrions pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à certains de nos chaleureux convives des bains de soleil interminables…A cet effet, nous vous prions d'arriver au plus tard à 10h15 afin que le protocole d'organisation puisse avoir suffisamment de temps pour vous orienter et vous installer. Ceci permettra également de déployer rapidement des solutions à d'éventuels imprévus.
+La cérémonie se déroulera en plein air, dans les jardins des PALETUVIERS –MATANDA à l’entrée de Bonabéri. Vous conviendrez avec nous qu'il serait regrettable de débuter cette fête avec des vêtements trempés par de la transpiration.
 Le succès de cet évènement commence par votre ponctualité !
-Pour ceux qui ont des enfants en bas âges, seuls les enfants âgés de 6 ans ou moins, pourront
-accompagner leurs parents. Il nous est difficile de les compter parmi nous, compte tenu de
-l&#39;organisation mise en place. Nous espérons que vous comprendrez et que vous respecterez
-cela.
-Par la même occasion, veuillez préciser si votre enfant (06 ans au moins) est allergique à l&#39;alcool
-:-)
+Pour ceux qui ont des enfants en bas âges, seuls les enfants âgés de 6 ans ou moins, pourront accompagner leurs parents. Il nous est difficile de les compter parmi nous, compte tenu de l'organisation mise en place. Nous espérons que vous comprendrez et que vous respecterez cela.
+Par la même occasion, veuillez préciser si votre enfant (06 ans au moins) est allergique à l'alcool :-)
 
- Lieux
-
-Jardins les PALETUVIERS MATANDA situé à 800 m du rond-point Bonassama, à l’entrée de
-Bonabéri. Ils sont faciles d’accès.
-
-La cérémonie religieuse et le cocktail se tiendront dans les jardins. Nous vous y attendrons à
-partir de 10h 00.
+ Lieux
+Jardins les PALETUVIERS MATANDA situé à 800 m du rond-point Bonassama, à l’entrée de Bonabéri. Ils sont faciles d’accès.
+La cérémonie religieuse et le cocktail se tiendront dans les jardins. Nous vous y attendrons à partir de 10h 00.
 
 LISTE DES CADEAUX
-
 Nous n’avons pas de liste de cadeaux.
     -->
+    <style>
+      /* Header Parallax Element Style*/
+      .paral {
+        min-height: 600px;
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: 50% 50%;
+      }
+
+      /* Paragrapgh for Parallax Section */
+      .paral p {
+        font-size: 24px;
+        color: #f5f5f5;
+        text-align: center;
+        line-height: 60px;
+      }
+
+      /* Heading for Parallax Section */
+      .paral h1 {
+        color: rgba(255, 255, 255, 0.8);
+        font-size: 60px;
+        text-align: center;
+        padding-top: 60px;
+        line-height: 100px;
+      }
+
+      /* Image for Parallax Section */
+      .paralsec {
+        background-image: url("https://img.webnots.com/2017/05/parallax.jpg");
+      }
+
+      .paralsec1 {
+        background-image: url("https://img.webnots.com/2017/05/parallax1.jpg");
+      }
+
+      .paralsec2 {
+        background-image: url("img/venue/venue8.jpg");
+      }
+
+      /* Add more images for more sections */
+
+      /* Remove Bottom Margin from Jumbotron */
+      .jumbotron {
+        margin-bottom: 0;
+      }
+
+      /* Footer */
+      .wn-footer {
+        padding: 2.5rem 0;
+        text-align: center;
+        color: white;
+        background-color: #997a8d;
+        border-top: 0.05rem solid #e5e5e5;
+      }
+
+      .wn-footer a {
+        color: yellow;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Marriage</a>
+      <a class="navbar-brand" href="#">#EkambisWedding</a>
       <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
+        data-target="#main-navbar"
+        aria-controls="main-navbar"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#"
@@ -121,36 +156,107 @@ Nous n’avons pas de liste de cadeaux.
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Programme</a>
+            <a class="nav-link" href="#programme">Programme de la Journée</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Lieu</a>
+            <a class="nav-link" href="#story">Our Love Story</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallerie</a>
+            <a class="nav-link" href="#marriage">Mariage</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#lieux">Lieux</a>
           </li>
         </ul>
       </div>
     </nav>
-    <div class="container-fluid">
-      <div></div>
+    <div data-spy="scroll" data-target="#main-navbar" data-offset="0">
+      <!-- First Parallax Section -->
+      <div class="jumbotron paral paralsec" id="welcome">
+        <h1 class="display-3">Here is a heading 1</h1>
+        <p class="lead">Here is a short description 1</p>
+        <p class="lead">
+          <a class="btn btn-info btn-lg btn-md" href="#" role="button"
+            >Here is a button 1</a
+          >
+        </p>
+      </div>
+
+      <!-- Second Parallax Section -->
+      <div class="jumbotron paral paralsec1">
+        <h1 class="display-3">Here is a heading 2</h1>
+        <p class="lead">Here is a short description 2</p>
+        <p class="lead">
+          <a
+            class="btn btn-warning btn-lg btn-md"
+            href="widgets.html"
+            role="button"
+            >Here is a button 2</a
+          >
+        </p>
+      </div>
+      <div class="jumbotron paral paralsec">
+        <h1 class="display-3">Here is a heading 1</h1>
+        <p class="lead">Here is a short description 1</p>
+        <p class="lead">
+          <a class="btn btn-info btn-lg btn-md" href="#" role="button"
+            >Here is a button 1</a
+          >
+        </p>
+      </div>
+      <!-- Third Parallax Section -->
+      <div class="jumbotron paral paralsec2">
+        <h1 class="display-3">Here is a heading 3</h1>
+        <p class="lead">Here is a short description 2</p>
+        <p class="lead">
+          <a
+            class="btn btn-primary btn-lg btn-md"
+            href="themes.html"
+            role="button"
+            >Here is a button 3</a
+          >
+        </p>
+      </div>
+
+      <!-- <div class="jumbotron paral paralsec2">
+        <h1 class="display-3">Here is a heading 3</h1>
+        <p class="lead">Here is a short description 2</p>
+        <p class="lead">
+          <a
+            class="btn btn-primary btn-lg btn-md"
+            href="themes.html"
+            role="button"
+            >Here is a button 3</a
+          >
+        </p>
+      </div> -->
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Add More Parallax Sections Here -->
+    <!-- Footer Section -->
+    <footer class="wn-footer">
+      <p>
+        This is a Bootstrap 4 parallax page with jumbotron created by
+        <a href="https://www.webnots.com/">WebNots Web Consulting Services</a>
+      </p>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
+    </footer>
+    <!-- Bootstrap 4 Scripts -->
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
   </body>
