--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
     <!--
+
+      music playing
+slideshow of photos
+the wedding party
+letters from each of them
+travel and accommodations
+wedding events
+registry
+wall - so anyone can post
+timeline of events (proposal, bridal shower, engagement party, wedding etc)
+thank you
+
+--------------------------------------------------------
         Nom du domaine : ekambiSwedding.com
 Thème du mariage : Champêtre
 Nos couleurs : Rose pâle (vieux rose) & Greenery (vert nature)
@@ -73,68 +87,10 @@ La cérémonie religieuse et le cocktail se tiendront dans les jardins. Nous vou
 LISTE DES CADEAUX
 Nous n’avons pas de liste de cadeaux.
     -->
-    <style>
-      /* Header Parallax Element Style*/
-      .paral {
-        min-height: 600px;
-        background-attachment: fixed;
-        background-size: cover;
-        background-position: 50% 50%;
-      }
-
-      /* Paragrapgh for Parallax Section */
-      .paral p {
-        font-size: 24px;
-        color: #f5f5f5;
-        text-align: center;
-        line-height: 60px;
-      }
-
-      /* Heading for Parallax Section */
-      .paral h1 {
-        color: rgba(255, 255, 255, 0.8);
-        font-size: 60px;
-        text-align: center;
-        padding-top: 60px;
-        line-height: 100px;
-      }
-
-      /* Image for Parallax Section */
-      .paralsec {
-        background-image: url("https://img.webnots.com/2017/05/parallax.jpg");
-      }
-
-      .paralsec1 {
-        background-image: url("https://img.webnots.com/2017/05/parallax1.jpg");
-      }
-
-      .paralsec2 {
-        background-image: url("img/venue/venue8.jpg");
-      }
-
-      /* Add more images for more sections */
-
-      /* Remove Bottom Margin from Jumbotron */
-      .jumbotron {
-        margin-bottom: 0;
-      }
-
-      /* Footer */
-      .wn-footer {
-        padding: 2.5rem 0;
-        text-align: center;
-        color: white;
-        background-color: #997a8d;
-        border-top: 0.05rem solid #e5e5e5;
-      }
-
-      .wn-footer a {
-        color: yellow;
-      }
-    </style>
+    <style></style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-marriage">
       <a class="navbar-brand" href="#">#EkambisWedding</a>
       <button
         class="navbar-toggler"
@@ -171,8 +127,20 @@ Nous n’avons pas de liste de cadeaux.
       </div>
     </nav>
     <div data-spy="scroll" data-target="#main-navbar" data-offset="0">
-      <!-- First Parallax Section -->
-      <div class="jumbotron paral paralsec" id="welcome">
+      <div class="jumbotron paral paral-marriage">
+        <h1 class="display-3">Here is a heading 2</h1>
+        <p class="lead">Here is a short description 2</p>
+        <p class="lead">
+          <a
+            class="btn btn-warning btn-lg btn-md"
+            href="widgets.html"
+            role="button"
+            >Here is a button 2</a
+          >
+        </p>
+      </div>
+
+      <div class="jumbotron paral paralsec">
         <h1 class="display-3">Here is a heading 1</h1>
         <p class="lead">Here is a short description 1</p>
         <p class="lead">
@@ -181,7 +149,6 @@ Nous n’avons pas de liste de cadeaux.
           >
         </p>
       </div>
-
       <!-- Second Parallax Section -->
       <div class="jumbotron paral paralsec1">
         <h1 class="display-3">Here is a heading 2</h1>
@@ -195,7 +162,9 @@ Nous n’avons pas de liste de cadeaux.
           >
         </p>
       </div>
-      <div class="jumbotron paral paralsec">
+
+      <!-- First Parallax Section -->
+      <!-- <div class="jumbotron paral paralsec" id="welcome">
         <h1 class="display-3">Here is a heading 1</h1>
         <p class="lead">Here is a short description 1</p>
         <p class="lead">
@@ -203,9 +172,9 @@ Nous n’avons pas de liste de cadeaux.
             >Here is a button 1</a
           >
         </p>
-      </div>
+      </div> -->
       <!-- Third Parallax Section -->
-      <div class="jumbotron paral paralsec2">
+      <!-- <div class="jumbotron paral paralsec2">
         <h1 class="display-3">Here is a heading 3</h1>
         <p class="lead">Here is a short description 2</p>
         <p class="lead">
@@ -216,7 +185,7 @@ Nous n’avons pas de liste de cadeaux.
             >Here is a button 3</a
           >
         </p>
-      </div>
+      </div> -->
 
       <!-- <div class="jumbotron paral paralsec2">
         <h1 class="display-3">Here is a heading 3</h1>
