--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <!--
 
+    <!--
       music playing
 slideshow of photos
 the wedding party
@@ -36,10 +36,8 @@ Dress Code : Tenue de Cocktail
 Lieu : Jardins les PALETUVIERS MATANDA –  Bonabéri (Bonassama)
 
 ACCUEIL
-Bienvenue dans notre monde!
-Nous avions souhaité pouvoir vous fournir quelques informations utiles afin de faciliter votre organisation pour participer au Tome 2 de notre mariage. Votre présence à cet évènement sera réellement un symbole d’amour marquant pour la suite de notre belle histoire, et nous espérons que vos allers-retours/voyages se feront sans complications. Si vous devez vous plaindre de courbatures dès le lendemain, ce serait super que ce soit uniquement dû à l'expression de votre joie débordante tout au long de cette belle journée.
-Nous frémissons de joie à l'idée de vous compter parmi nous!
-The Ekambi’s
+
+
 
 OUR LOVE STORY
      Un signe, encore un signe… puis un autre……
@@ -90,7 +88,7 @@ Nous n’avons pas de liste de cadeaux.
     <style></style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-marriage">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-marriage">
       <a class="navbar-brand" href="#">#EkambisWedding</a>
       <button
         class="navbar-toggler"
@@ -107,7 +105,7 @@ Nous n’avons pas de liste de cadeaux.
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="#welcome"
               >Acceuil <span class="sr-only">(current)</span></a
             >
           </li>
@@ -127,21 +125,33 @@ Nous n’avons pas de liste de cadeaux.
       </div>
     </nav>
     <div data-spy="scroll" data-target="#main-navbar" data-offset="0">
-      <div class="jumbotron paral paral-marriage">
-        <h1 class="display-3">Here is a heading 2</h1>
-        <p class="lead">Here is a short description 2</p>
-        <p class="lead">
+      <div class="jumbotron paral paral-marriage" id="welcome">
+        <h1 class="display-3">Bienvenue dans notre monde!</h1>
+        <p class="lead">JJ - <span id="numberOfDays"></span></p>
+        <P class="lead"
+          >Nous avions souhaité pouvoir vous fournir quelques informations
+          utiles afin de faciliter votre organisation pour participer au Tome 2
+          de notre mariage. Votre présence à cet évènement sera réellement un
+          symbole d’amour marquant pour la suite de notre belle histoire, et
+          nous espérons que vos allers-retours/voyages se feront sans
+          complications. Si vous devez vous plaindre de courbatures dès le
+          lendemain, ce serait super que ce soit uniquement dû à l'expression de
+          votre joie débordante tout au long de cette belle journée. Nous
+          frémissons de joie à l'idée de vous compter parmi nous! The
+          Ekambi’s</P
+        >
+        <!-- <p class="lead">
           <a
             class="btn btn-warning btn-lg btn-md"
             href="widgets.html"
             role="button"
             >Here is a button 2</a
           >
-        </p>
+        </p> -->
       </div>
 
       <div class="jumbotron paral paralsec">
-        <h1 class="display-3">Here is a heading 1</h1>
+        <h1 class="display-3">Bienvenue dans notre monde!</h1>
         <p class="lead">Here is a short description 1</p>
         <p class="lead">
           <a class="btn btn-info btn-lg btn-md" href="#" role="button"
@@ -205,8 +215,8 @@ Nous n’avons pas de liste de cadeaux.
     <!-- Footer Section -->
     <footer class="wn-footer">
       <p>
-        This is a Bootstrap 4 parallax page with jumbotron created by
-        <a href="https://www.webnots.com/">WebNots Web Consulting Services</a>
+        Created With love By:
+        <a href="https://www.ronaldekambi.com/">Ronald</a>
       </p>
       <p>
         <a href="#">Back to top</a>
@@ -228,5 +238,11 @@ Nous n’avons pas de liste de cadeaux.
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="js/difference-days.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#numberOfDays").text(fnGetDiffDays());
+      });
+    </script>
   </body>
 </html>
