--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
-    <!--
+    <!----------------------------------------------------------
       music playing
 slideshow of photos
 the wedding party
@@ -28,67 +28,13 @@ wall - so anyone can post
 timeline of events (proposal, bridal shower, engagement party, wedding etc)
 thank you
 
---------------------------------------------------------
-        Nom du domaine : ekambiSwedding.com
-Thème du mariage : Champêtre
-Nos couleurs : Rose pâle (vieux rose) & Greenery (vert nature)
-Dress Code : Tenue de Cocktail
-Lieu : Jardins les PALETUVIERS MATANDA –  Bonabéri (Bonassama)
-
-ACCUEIL
-
-
-
-OUR LOVE STORY
-     Un signe, encore un signe… puis un autre……
-                                                     Au cœur des mots, s’est écrit Notre histoire d’amour !!!
-
-13 Mai 2013 : Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a commencé
-14 Février 2015 : Officialisation de la team « Ekambi’S »
-02 Juin 2015 : Nous sommes devenus parents
-21 Décembre 2019 : Bénédiction de la team « Ekambi’S » devant Dieu et vous…
-
-    « Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux sans toi…c’est mieux »
-
-
-
-
-
-
-PROGRAMME DE LA JOURNEE
-
-10h : Arrivée des invités et Installation
-10h 30 : Entrée des Demoiselles et Garçons d’honneur
-10h 45 : Entrée des pasteurs
-10h 50 : Entrée du Marié et sa Maman
-10h 55 : Entrée de la mariée et son papa
-11h 00 : Début de la cérémonie
-12h 45 : Fin de la cérémonie
-13h 00 : Séance Photos et Apéritif Musical
-14h 30 : Début du Cocktail
-
-                                                              Mariage
-                                                 Samedi, 21 Décembre 2019 à 11h 00
-                                      Jardins les PALETUVIERS – MATANDA à Bonabéri
-Chères invitées, chers invités,
-Nous souhaitons également attirer votre attention sur l'heure de début de la cérémonie.
-Nous voudrions pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à certains de nos chaleureux convives des bains de soleil interminables…A cet effet, nous vous prions d'arriver au plus tard à 10h15 afin que le protocole d'organisation puisse avoir suffisamment de temps pour vous orienter et vous installer. Ceci permettra également de déployer rapidement des solutions à d'éventuels imprévus.
-La cérémonie se déroulera en plein air, dans les jardins des PALETUVIERS –MATANDA à l’entrée de Bonabéri. Vous conviendrez avec nous qu'il serait regrettable de débuter cette fête avec des vêtements trempés par de la transpiration.
-Le succès de cet évènement commence par votre ponctualité !
-Pour ceux qui ont des enfants en bas âges, seuls les enfants âgés de 6 ans ou moins, pourront accompagner leurs parents. Il nous est difficile de les compter parmi nous, compte tenu de l'organisation mise en place. Nous espérons que vous comprendrez et que vous respecterez cela.
-Par la même occasion, veuillez préciser si votre enfant (06 ans au moins) est allergique à l'alcool :-)
-
- Lieux
-Jardins les PALETUVIERS MATANDA situé à 800 m du rond-point Bonassama, à l’entrée de Bonabéri. Ils sont faciles d’accès.
-La cérémonie religieuse et le cocktail se tiendront dans les jardins. Nous vous y attendrons à partir de 10h 00.
-
-LISTE DES CADEAUX
-Nous n’avons pas de liste de cadeaux.
-    -->
+--------------------------------------------------------->
     <style></style>
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-marriage">
+    <nav
+      class="navbar sticky-top navbar-expand-lg navbar-dark bg-marriage-dark"
+    >
       <a class="navbar-brand" href="#">#EkambisWedding</a>
       <button
         class="navbar-toggler"
@@ -119,13 +65,19 @@ Nous n’avons pas de liste de cadeaux.
             <a class="nav-link" href="#marriage">Mariage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#lieux">Lieux</a>
+            <a class="nav-link" href="#lieu">Lieu</a>
           </li>
         </ul>
       </div>
     </nav>
     <div data-spy="scroll" data-target="#main-navbar" data-offset="0">
-      <div class="jumbotron paral paral-marriage" id="welcome">
+      <div id="welcome" class="jumbotron paral paral-marriage"></div>
+      <div id="programme" class="jumbotron paral paral-marriage"></div>
+      <div id="story" class="jumbotron paral paral-marriage"></div>
+      <div id="marriage" class="jumbotron paral paral-marriage"></div>
+      <div id="lieu" class="jumbotron paral paral-marriage"></div>
+    </div>
+    <!-- <div class="jumbotron paral paral-marriage" id="welcome">
         <h1 class="display-3">Bienvenue dans notre monde!</h1>
         <p class="lead">JJ - <span id="numberOfDays"></span></p>
         <P class="lead"
@@ -140,26 +92,116 @@ Nous n’avons pas de liste de cadeaux.
           frémissons de joie à l'idée de vous compter parmi nous! The
           Ekambi’s</P
         >
-        <!-- <p class="lead">
+        <p class="lead">
           <a
             class="btn btn-warning btn-lg btn-md"
             href="widgets.html"
             role="button"
             >Here is a button 2</a
           >
-        </p> -->
+        </p>
       </div>
 
       <div class="jumbotron paral paralsec">
         <h1 class="display-3">Bienvenue dans notre monde!</h1>
-        <p class="lead">Here is a short description 1</p>
+        <p class="lead">
+          Lieux Jardins les PALETUVIERS MATANDA situé à 800 m du rond-point
+          Bonassama, à l’entrée de Bonabéri. Ils sont faciles d’accès. La
+          cérémonie religieuse et le cocktail se tiendront dans les jardins.
+          Nous vous y attendrons à partir de 10h 00.
+        </p>
         <p class="lead">
           <a class="btn btn-info btn-lg btn-md" href="#" role="button"
             >Here is a button 1</a
           >
         </p>
       </div>
-      <!-- Second Parallax Section -->
+
+      <div class="jumbotron paral paralsec1">
+        <h1 class="display-3">Here is a heading 2</h1>
+        <p class="lead">
+          Chères invitées, chers invités, Nous souhaitons également attirer
+          votre attention sur l'heure de début de la cérémonie. Nous voudrions
+          pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à
+          certains de nos chaleureux convives des bains de soleil
+          interminables…A cet effet, nous vous prions d'arriver au plus tard à
+          10h15 afin que le protocole d'organisation puisse avoir suffisamment
+          de temps pour vous orienter et vous installer. Ceci permettra
+          également de déployer rapidement des solutions à d'éventuels imprévus.
+          La cérémonie se déroulera en plein air, dans les jardins des
+          PALETUVIERS –MATANDA à l’entrée de Bonabéri. Vous conviendrez avec
+          nous qu'il serait regrettable de débuter cette fête avec des vêtements
+          trempés par de la transpiration. Le succès de cet évènement commence
+          par votre ponctualité ! Pour ceux qui ont des enfants en bas âges,
+          seuls les enfants âgés de 6 ans ou moins, pourront accompagner leurs
+          parents. Il nous est difficile de les compter parmi nous, compte tenu
+          de l'organisation mise en place. Nous espérons que vous comprendrez et
+          que vous respecterez cela. Par la même occasion, veuillez préciser si
+          votre enfant (06 ans au moins) est allergique à l'alcool :-)
+        </p>
+        <p class="lead">
+          <a
+            class="btn btn-warning btn-lg btn-md"
+            href="widgets.html"
+            role="button"
+            >Here is a button 2</a
+          >
+        </p>
+      </div>
+
+      <div class="jumbotron paral paralsec">
+        <h1 class="display-3">Bienvenue dans notre monde!</h1>
+        <p class="lead">
+          OUR LOVE STORY Un signe, encore un signe… puis un autre…… Au cœur des
+          mots, s’est écrit Notre histoire d’amour !!! 13 Mai 2013 : Un vol
+          Royal Air Maroc : Un gars, Une fille…Là où tout a commencé 14 Février
+          2015 : Officialisation de la team « Ekambi’S » 02 Juin 2015 : Nous
+          sommes devenus parents 21 Décembre 2019 : Bénédiction de la team «
+          Ekambi’S » devant Dieu et vous… « Etre proche de quelqu’un qui te rend
+          heureuse c’est bien, mais être proche de quelqu’un qui ne peut pas
+          être heureux sans toi…c’est mieux »
+        </p>
+        <p class="lead">
+          <a class="btn btn-info btn-lg btn-md" href="#" role="button"
+            >Here is a button 1</a
+          >
+        </p>
+      </div>
+
+      <div class="jumbotron paral paralsec1">
+        <h1 class="display-3">Here is a heading 2</h1>
+        <p class="lead">
+          Nos couleurs : Rose pâle (vieux rose) & Greenery (vert nature) Dress
+          Code : Tenue de Cocktail Lieu : Jardins les PALETUVIERS MATANDA –
+          Bonabéri (Bonassama)
+        </p>
+        <p class="lead">
+          <a
+            class="btn btn-warning btn-lg btn-md"
+            href="widgets.html"
+            role="button"
+            >Here is a button 2</a
+          >
+        </p>
+      </div>
+
+      <div class="jumbotron paral paralsec">
+        <h1 class="display-3">Bienvenue dans notre monde!</h1>
+        <p class="lead">
+          PROGRAMME DE LA JOURNEE 10h : Arrivée des invités et Installation 10h
+          30 : Entrée des Demoiselles et Garçons d’honneur 10h 45 : Entrée des
+          pasteurs 10h 50 : Entrée du Marié et sa Maman 10h 55 : Entrée de la
+          mariée et son papa 11h 00 : Début de la cérémonie 12h 45 : Fin de la
+          cérémonie 13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
+          Cocktail
+        </p>
+        <p class="lead">
+          <a class="btn btn-info btn-lg btn-md" href="#" role="button"
+            >Here is a button 1</a
+          >
+        </p>
+      </div>
+
       <div class="jumbotron paral paralsec1">
         <h1 class="display-3">Here is a heading 2</h1>
         <p class="lead">Here is a short description 2</p>
@@ -173,8 +215,35 @@ Nous n’avons pas de liste de cadeaux.
         </p>
       </div>
 
-      <!-- First Parallax Section -->
-      <!-- <div class="jumbotron paral paralsec" id="welcome">
+      <div class="jumbotron paral paralsec">
+        <h1 class="display-3">Bienvenue dans notre monde!</h1>
+        <p class="lead">
+          Mariage Samedi, 21 Décembre 2019 à 11h 00 Jardins les PALETUVIERS –
+          MATANDA à Bonabéri
+        </p>
+        <p class="lead">
+          <a class="btn btn-info btn-lg btn-md" href="#" role="button"
+            >Here is a button 1</a
+          >
+        </p>
+      </div>
+
+      <div class="jumbotron paral paralsec1">
+        <h1 class="display-3">Here is a heading 2</h1>
+        <p class="lead">
+          LISTE DES CADEAUX Nous n’avons pas de liste de cadeaux.
+        </p>
+        <p class="lead">
+          <a
+            class="btn btn-warning btn-lg btn-md"
+            href="widgets.html"
+            role="button"
+            >Here is a button 2</a
+          >
+        </p>
+      </div> -->
+    <!-- First Parallax Section -->
+    <!-- <div class="jumbotron paral paralsec" id="welcome">
         <h1 class="display-3">Here is a heading 1</h1>
         <p class="lead">Here is a short description 1</p>
         <p class="lead">
@@ -183,8 +252,8 @@ Nous n’avons pas de liste de cadeaux.
           >
         </p>
       </div> -->
-      <!-- Third Parallax Section -->
-      <!-- <div class="jumbotron paral paralsec2">
+    <!-- Third Parallax Section -->
+    <!-- <div class="jumbotron paral paralsec2">
         <h1 class="display-3">Here is a heading 3</h1>
         <p class="lead">Here is a short description 2</p>
         <p class="lead">
@@ -197,7 +266,7 @@ Nous n’avons pas de liste de cadeaux.
         </p>
       </div> -->
 
-      <!-- <div class="jumbotron paral paralsec2">
+    <!-- <div class="jumbotron paral paralsec2">
         <h1 class="display-3">Here is a heading 3</h1>
         <p class="lead">Here is a short description 2</p>
         <p class="lead">
@@ -209,7 +278,6 @@ Nous n’avons pas de liste de cadeaux.
           >
         </p>
       </div> -->
-    </div>
 
     <!-- Add More Parallax Sections Here -->
     <!-- Footer Section -->
