--- a/index.html
+++ b/index.html
@@ -83,17 +83,28 @@ thank you
         class="h-100 d-flex jumbotron paral paral-marriage justify-content-center align-self-center"
         style="color: black"
       >
-        <!-- <p class="lead justify-content-center align-self-center"> -->
-        <h1>Julie <i class="fa fa-heart"></i>Sammy</h1>
+        <!-- <p class="lead "> -->
+        <h1 class="main-h1-size">Julie <i class="fa fa-heart"></i> Sammy</h1>
         <!-- </p> -->
-        <!-- <p class="lead">Samedi, 23 September 2017, 15h00 RSVP</p>
-        <p class="lead">Jardins les PALETUVIERS MATANDA, Douala, Cameroun</p>
-        <p class="lead">JJ - <span id="numberOfDays"></span>!</p> -->
       </div>
 
-      <div id="programme" class="jumbotron paral paralsec1"></div>
+      <div
+        id="programme"
+        class="jumbotron paral paralsec1 justify-content-center align-self-center"
+      >
+        <p class="lead">
+          <i class="fa fa-heart"></i> Samedi, 23 September 2017, 15h00 RSVP
+        </p>
+        <p class="lead">
+          <i class="fa fa-heart"></i> Jardins les PALETUVIERS MATANDA, Douala,
+          Cameroun
+        </p>
+        <p class="lead">
+          <i class="fa fa-heart"></i> JJ - <span id="numberOfDays"></span>!
+        </p>
+      </div>
 
-      <div id="story" class="jumbotron paral paralsec1"></div>
+      <!-- <div id="story" class="jumbotron paral paralsec1"></div> -->
       <div id="marriage" class="jumbotron paral paral-marriage"></div>
       <div id="lieu" class="jumbotron paral paralsec1"></div>
     </div>
